thelounge/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: thelounge-ss
spec:
  selector:
    app: thelounge
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: thelounge
spec:
  selector:
    app: thelounge
  ports:
  - name: http
    targetPort: 9000
    port: 80
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: thelounge
spec:
  serviceName: thelounge-ss
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      containers:
      - name: thelounge
        image: thelounge/thelounge:3.0.0-rc.5
        ports:
        - containerPort: 9000
          name: http
        volumeMounts:
        - name: thelounge-data
          mountPath: /home/lounge/data
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
      volumes:
      - name: thelounge-data
        gcePersistentDisk:
          pdName: thelounge-data-pd
          fsType: ext4
